<resources>
    <string name="app_name">Fleurs Prêt</string>
    <string name="title_one">Accueil</string>
    <string name="title_two">Commandes</string>
    <string name="title_three">Le mien</string>
    <string name="text_policy_desc">Hi.there To access your eligibility and facilitate faster disbursal of your loan, we need these permissions</string>
    <string name="text_authorisation">Autorisation</string>
    <string name="text_read_privacy_policy_guide">J’ai lu attentivement la « Politique de Confidentialité ».</string>
    <string name="text_privacy_policy">« Politique de Confidentialité »</string>
    <string name="text_permission_declare"><![CDATA[SMS\n\nCollect and monitor only financial transaction Introducir texto messages including the name of the transaction party. The purpose is to conduct a credit risk assessment of the transaction and the description of the transaction amount. This credit risk assessment speeds up loan disbursement without any Perfil Introducir texto messages being deleted, read or collected\n\nContacts\n\nThe NBFC loan process and guidelines mandates us to verify references. This feature enables us to do that & Why type in contact number when you can just choose from your contact book.\n\nCamera and Photos]]></string>
    <string name="text_skip">SAUTER</string>
    <string name="text_accept_and_go_on">J\'ACCEPTE ET\n CONTINUE</string>
    <string name="text_montant_maximal">Montant maximal du prêt</string>
    <string name="text_xof">XOF</string>
    <string name="text_dur_e_maximale_du_remboursement">Durée maximale du remboursement</string>
    <string name="text_91_jours">91 Jours</string>
    <string name="text_demander_maintenant">Demander maintenant</string>
    <string name="text_guide_de_pr_t">Guide de prêt :</string>
    <string name="remtext_plissez_vos_informations_personnelles">Remplissez vos informations personnelles.</string>
    <string name="text_veuillez_fournir_le_num_ro_de_compte_bancaire_pour_recevoir_les_paiements">Veuillez fournir le numéro de compte bancaire pour recevoir les paiements.</string>
    <string name="text_pr_t_r_ussi">Prêt réussi</string>
    <string name="text_caract_ristiques_du_produit">Caractéristiques du produit</string>
    <string name="text_traitemen_rapide">Traitemen\nrapide</string>
    <string name="text_90_de_nr_ussite">90% de\nréussite</string>
    <string name="text_seulement_n3_tapes">Seulement\n3 étapes</string>
    <string name="text_connectez_vous_maintenant_pour_demander_votre_pr_t">Connectez-vous maintenant pour demander votre prêt</string>
    <string name="text_retour">Retour</string>
    <string name="_221">+221</string>
    <string name="text_saisissez_votre_num_ro_de_t_l_phone">Saisissez votre numéro de téléphone</string>
    <string name="text_entrez_le_code_de_v_rification">Entrez le code de vérification</string>
    <string name="text_obtenir_otp">Obtenir OTP</string>
    <string name="text_connectez_vous">Connectez-vous</string>
    <string name="text_le_num_ro_de_t_l_phone_portable_est_vide">Le numéro de téléphone portable est vide</string>
    <string name="text_le_code_de_v_rification_est_vide">Le code de vérification est vide</string>
    <string name="text_politique_de_confidentialit">Politique de Confidentialité</string>
    <string name="text_service_client_en_ligne">Service client en ligne</string>
    <string name="text_centre_de_service_client">Centre de service client</string>
    <string name="text_d_connexion">Déconnexion</string>
    <string name="text_r_acqu_rir_otp">Réacquérir OTP</string>
    <string name="text_fleurs_pret_des_services_milliers_d_utilisateurs">Fleurs Prêt a fourni des services de prêt à des milliers d\'utilisateurs</string>
    <string name="text_dont_98_sont_satisfaits">dont 98% sont satisfaits !</string>
    <string name="text_pourquoi_nous_choisi">Pourquoi nous choisi</string>
    <string name="text_taux_plus_bas">Taux plus bas</string>
    <string name="text_d_blocage_rapide_des_fonds">Déblocage rapide des fonds</string>
    <string name="text_options_de_dur_e_plus_flexibles">Options de durée plus flexibles</string>
    <string name="text_informations_personnelles">Informations personnelles</string>
    <string name="text_pr_noms">Prénoms</string>
    <string name="text_entrez_du_texte">Entrez du texte</string>
    <string name="text_nom">Nom</string>
    <string name="text_email">Email</string>
    <string name="text_choisissez_s_il_vous_pla_t">Choisissez s\'il vous plaît</string>
    <string name="text_date_de_naissance">Date de naissance</string>
    <string name="text_sexe">Sexe</string>
    <string name="text_choosiness_une_r_gion">Choosiness une région</string>
    <string name="text_suivant">Suivant</string>
    <string name="text_fermer">Fermer</string>
    <string name="text_confirmer">Confirmer</string>
    <string name="text_contacts_en_cas_d_urgence">Contacts en cas d\'urgence</string>
    <string name="text_premier_contact_d_urgence">Premier contact d\'urgence</string>
    <string name="text_relation">Relation</string>
    <string name="text_saisissez">Saisissez</string>
    <string name="text_num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="text_deuxi_me_contact_d_urgence">Deuxième contact d\'urgence</string>
    <string name="text_carte_d_identit">Carte d\'identité</string>
    <string name="text_recto">Recto</string>
    <string name="text_verso">Verso</string>
    <string name="text_n_de_la_carte_d_identit">N° de la carte d\'identité</string>
    <string name="text_reconnaissance_de_visage">Reconnaissance de visage</string>
    <string name="text_cliquer_ici">Cliquer ici</string>
    <string name="text_informations_d_identification">Informations d\'identification</string>
    <string name="text_informations_de_compte_de_r_ception">Informations de compte de réception</string>
    <string name="text_moyen_de_r_ception">Moyen de réception</string>
    <string name="text_num_ro_de_compte">Numéro de compte</string>
    <string name="text_confirmer_le_num_ro_de_compte">Confirmer le numéro de compte</string>
    <string name="text_adresse_compl_te">Adresse complète</string>
    <string name="text_next">Next</string>
    <string name="text_ann_e">Année</string>
    <string name="veuilltext_ez_compl_ter_toutes_les_informations">Veuillez compléter toutes les informations</string>
    <string name="text_m_le">mâle</string>
    <string name="text_femelle">femelle</string>
    <string name="text_troisi_me_sexe">troisième sexe</string>
    <string name="text_upload_failed_please_upload_again_carga_fallida_por_favor_sube_de_nuevo">Upload failed, please upload again-Carga fallida, por favor sube de nuevo.</string>
    <string name="text_fallo_la_carga">Fallo la carga</string>
    <string name="text_le_t_l_chargement_a_chou">Le téléchargement a échoué</string>
    <string name="text_t_l_chargement_r_ussi">Téléchargement réussi</string>
    <string name="text_les_num_ros_de_carte_bancaire_saisis_deux_fois_sont_incoh_rents">Les numéros de carte bancaire saisis deux fois sont incohérents</string>
    <string name="text_demander_un_pr_t">Demander un prêt</string>
    <string name="text_montant_du_pr_t">Montant du prêt</string>
    <string name="text_date_du_remboursement">Date du remboursement</string>
    <string name="text_d_tails_du_versement_amp_frais"><![CDATA[Détails du versement & Frais]]></string>
    <string name="text_d_tails_du_remboursement">Détails du remboursement</string>
    <string name="text_montant_recevoir">Montant à recevoir</string>
    <string name="text_int_r_t">Intérêt</string>
    <string name="text_frais_de_service">Frais de service</string>
    <string name="text_t_v_a">TVA</string>
    <string name="text_montant_du_remboursement">Montant du remboursement</string>
    <string name="text_annuler">Annuler</string>
    <string name="text_payer">Payer</string>
    <string name="text_moyen_de_remboursement_1">Moyen de remboursement 1</string>
    <string name="text_moyen_de_remboursement_2">Moyen de remboursement 2</string>
    <string name="text_prolonger_des_d_lais_de_remboursement">Prolonger des délais de remboursement</string>
    <string name="text_d_tails">Détails</string>
    <string name="text_dur_e_du_pr_t">Durée du prêt</string>
    <string name="text_montant_du_pr_t_augment_de_50_100">Montant du prêt augmenté de 50% à 100%</string>
    <string name="text_ok">OK</string>
    <string name="text_votre_pr_t_a_t_demand_avec_succ_s">Votre prêt a été demandé avec succès.</string>
    <string name="text_mes_ordres">Mes ordres</string>
    <string name="text_s_il_vous_pla_t_attendez">S\'il vous plaît, attendez</string>
    <string name="text_remboursement">Remboursement</string>
    <string name="text_si_vous_refusez_toujours_de_rembourser_ou_retardez_le_remboursement_toutes_les_cons_quences_vous_serez_confront_y_compris_l_augmentation_des_amendes_la_r_duction_du_cr_dit_le_gel_des_cartes_bancaires_les_poursuites_judiciaires_etc">Si vous refusez toujours de rembourser ou retardez le remboursement, toutes les conséquences\nvous serez confronté, y compris l\'augmentation des amendes, la réduction du crédit, le gel des cartes bancaires, les poursuites judiciaires, etc.</string>
    <string name="text_voir_maintenant">Voir maintenant</string>
    <string name="text_d_sol_votre_commande_n_est_pas_approuv_e_cliquez_voir_les_raisons_probables">Désolé, votre commande n\'est pas approuvée, cliquez voir les raisons probables.</string>
    <string name="text_mettre_jour_le_compte_de_r_ception">Mettre à jour le compte de réception</string>
    <string name="text_e_syst_me_a_d_tect_des_informations_fausses_dans_vos_informations_de_compte_de_r_ception_veuillez_les_remettre">e système a détecté des informations fausses dans vos informations de compte de réception, veuillez les remettre.</string>
    <string name="text_cette_commande_est_quitte_cliquez_sur_le_bouton_pour_en_emprunter_une_autre">Cette commande est quitte, cliquez sur le bouton pour en emprunter une autre</string>
    <string name="text_aucune_commande_associ_e_trouv_e">Aucune commande associée trouvée</string>
    <string name="text_la_demande_rejet_e">La demande rejetée</string>
    <string name="text_nous_sommes_en_train_d_valuer_votre_demande_du_pr_t_veuillez_attendre_patiemment_le_r_sultat_d_valuation">Nous sommes en train d\'évaluer votre demande du prêt, veuillez attendre patiemment le résultat d\'évaluation.</string>
    <string name="text_en_valuation">En évaluation</string>
    <string name="text_monto_del_pr_stamo">Monto del préstamo</string>
    <string name="text_fecha_de_solicitud">Fecha de solicitud</string>
    <string name="text_en_train_de_versement">En train de versement</string>
    <string name="text_votre_demande_du_pr_t_a_t_approuv_e_le_versement_est_en_cours">Votre demande du prêt a été approuvée.\nLe versement est en cours.</string>
    <string name="text_d_sol">Désolé</string>
    <string name="text_rejetee_desc">Les raisons du rejet peuvent être ： -Les informations fournies sont incorrectes -Votre photo n\'est pas clairement identifiée -Vos informations ont besoin d\'une révision approfondie Vous pouvez refaire une demande après %s jours.</string>
    <string name="text_la_demande_a_t_rejet_e">La demande a été rejetée</string>
    <string name="text_demander_miantenant">Demander miantenant</string>
    <string name="text_bonjour">Bonjour!</string>
    <string name="text_veuillez_essayer_les_pr_ts_gratuits_suivants">Veuillez essayer les prêts gratuits suivants :</string>
    <string name="text_t_l_phone">Téléphone</string>
    <string name="text_whatsapp">Whatsapp</string>
    <string name="text_e_mail">E-mail</string>
    <string name="text_copi">Copié</string>
    <string name="text_notification">Notification</string>
    <string name="text_s_il_vous_pla_t_donner_une_bonne_critique">S\'il vous plaît donner une bonne critique</string>
    <string name="text_error_de_red">Error de red</string>
</resources>