<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_one">

    <fragment
        android:id="@+id/navigation_one"
        android:name="com.facile.immediate.electronique.fleurs.pret.home.view.FirstFragment"
        android:label="@string/title_one"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_two"
        android:name="com.facile.immediate.electronique.fleurs.pret.order.view.SecondFragment"
        android:label="@string/title_two"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_three"
        android:name="com.facile.immediate.electronique.fleurs.pret.mine.ThirdFragment"
        android:label="@string/title_three"
        tools:layout="@layout/fragment_notifications" />
</navigation>