<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:parentTag="androidx.appcompat.widget.LinearLayoutCompat">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/text_relation"
        android:textColor="@color/color_242237"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_relation"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:autofillHints=""
        android:background="@drawable/shape_bg_ffffff_stroke_e7e7e7_1_radius_4"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:hint="@string/text_choisissez_s_il_vous_pla_t"
        android:paddingHorizontal="10dp"
        android:textColor="@color/color_999999"
        android:textColorHint="@color/color_999999"
        android:textSize="14sp"
        app:drawableEndCompat="@mipmap/icon_arrow_down"
        app:drawableTint="@color/color_666666" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_num_ro_de_t_l_phone"
        android:textColor="@color/color_242237"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/shape_bg_ffffff_stroke_e7e7e7_1_radius_4"
        android:hint="@string/text_saisissez"
        android:inputType="phone"
        android:maxLength="20"
        android:minHeight="44dp"
        android:paddingHorizontal="10dp"
        android:textColor="@color/color_999999"
        android:textColorHint="@color/color_999999"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text_nom"
        android:textColor="@color/color_242237"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/shape_bg_ffffff_stroke_e7e7e7_1_radius_4"
        android:hint="@string/text_saisissez"
        android:inputType="textMultiLine"
        android:minHeight="44dp"
        android:paddingHorizontal="10dp"
        android:textColor="@color/color_999999"
        android:textColorHint="@color/color_999999"
        android:textSize="14sp" />

</androidx.appcompat.widget.LinearLayoutCompat>