<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@mipmap/pic_locked_repayment_date_tip_top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_montant_du_pr_t"
        android:textColor="@color/color_242237"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_montant_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_montant_du_pr_t_augment_de_50_100"
        android:textColor="@color/color_666666"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_dur_e_du_pr_t"
        android:textColor="@color/color_242237"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@mipmap/pic_locked_repayment_date_tip_bottom" />
</androidx.appcompat.widget.LinearLayoutCompat>