<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/in_title_bar"
        layout="@layout/title_bar_layout" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingTop="20dp"
            android:paddingBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_pr_noms"
                android:textColor="@color/color_242237"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:autofillHints=""
                android:background="@drawable/shape_bg_ffffff_stroke_e7e7e7_1_radius_4"
                android:hint="@string/text_entrez_du_texte"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_nom"
                android:textColor="@color/color_242237"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_nom"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:autofillHints=""
                android:background="@drawable/shape_bg_ffffff_stroke_e7e7e7_1_radius_4"
                android:hint="@string/text_entrez_du_texte"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_date_de_naissance"
                android:textColor="@color/color_242237"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:autofillHints=""
                android:background="@drawable/shape_bg_ffffff_stroke_e7e7e7_1_radius_4"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:hint="@string/text_choisissez_s_il_vous_pla_t"
                android:paddingHorizontal="10dp"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14sp"
                app:drawableEndCompat="@mipmap/icon_date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_sexe"
                android:textColor="@color/color_242237"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:autofillHints=""
                android:background="@drawable/shape_bg_ffffff_stroke_e7e7e7_1_radius_4"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:hint="@string/text_choisissez_s_il_vous_pla_t"
                android:paddingHorizontal="10dp"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14sp"
                app:drawableEndCompat="@mipmap/icon_arrow_down"
                app:drawableTint="@color/color_666666" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_email"
                android:textColor="@color/color_242237"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:autofillHints=""
                android:background="@drawable/shape_bg_ffffff_stroke_e7e7e7_1_radius_4"
                android:hint="@string/text_entrez_du_texte"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="10dp"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_choosiness_une_r_gion"
                android:textColor="@color/color_242237"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_region"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:autofillHints=""
                android:background="@drawable/shape_bg_ffffff_stroke_e7e7e7_1_radius_4"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:hint="@string/text_choisissez_s_il_vous_pla_t"
                android:paddingHorizontal="10dp"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14sp"
                app:drawableEndCompat="@mipmap/icon_arrow_down"
                app:drawableTint="@color/color_666666" />

            <TextView
                android:id="@+id/tv_input_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_adresse_compl_te"
                android:textColor="@color/color_242237"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:autofillHints=""
                android:background="@drawable/shape_bg_ffffff_stroke_e7e7e7_1_radius_4"
                android:hint="@string/text_entrez_du_texte"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/drawable_select_state_btn"
        android:gravity="center"
        android:text="@string/text_suivant"
        android:textColor="@color/color_FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_read_privacy_policy_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="25dp"
        android:text="@string/text_read_privacy_policy_guide"
        android:textColor="@color/color_999999"
        android:textSize="12sp" />
</androidx.appcompat.widget.LinearLayoutCompat>